--- a/.env
+++ b/.env
@@ -7,6 +7,6 @@ IAM_USER_SECRET = "rI12zBEjzQ3sGfXB3HVjKpO2oyRHZ4GGlnly6ahN"
 PORT = "http://localhost:4000"
 
 DB_NAME = "expense-tracker"
-DB_PASSWORD = "2112"
-DB_USERNAME = "root"
+DB_PASSWORD = "shubham123"
+DB_USERNAME = "shubham"
 DB_HOST = "localhost"
