--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "fs": "^0.0.1-security",
     "helmet": "^7.0.0",
     "jsonwebtoken": "^9.0.1",
+    "mongodb": "^6.0.0",
+    "mongoose": "^7.5.1",
     "morgan": "^1.10.0",
     "mysql2": "^3.5.2",
     "nodemailer": "^6.9.4",
